@@ -1,6 +1,7 @@
 ==
 
 * fixed io validation to not duplicate IOs
+* fixed :hidden type for nested configurations
 
 == 0.4.2 / 2009-03-30
 
